--- a/workspace_spring/Security-Test/src/main/resources/application.properties
+++ b/workspace_spring/Security-Test/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.datasource.password=mariadb
 
 #\uCFFC\uB9AC\uAC00 \uB4E4\uC5B4\uC788\uB294 mapper \uD30C\uC77C \uC704\uCE58 \uC9C0\uC815
 mybatis.mapper-locations=classpath:mapper/*.xml
+
+#secretKey
+spring.jwt.secret=?mw~W`:|23^x{QDMnT+|zdC~fZE&v8dvcuU!A(VN|4h=2h+]g^'DPd;N\Zl@6aoQ
