--- a/workspace_spring/Security-Test/src/main/resources/application.properties
+++ b/workspace_spring/Security-Test/src/main/resources/application.properties
@@ -16,4 +16,6 @@ spring.datasource.password=mariadb
 mybatis.mapper-locations=classpath:mapper/*.xml
 
 #secretKey
-spring.jwt.secret=?mw~W`:|23^x{QDMnT+|zdC~fZE&v8dvcuU!A(VN|4h=2h+]g^'DPd;N\Zl@6aoQ
+#spring.jwt.secret=?mw~W`:|23^x{QDMnT+|zdC~fZE&v8dvcuU!A(VN|4h=2h+]g^'DPd;N\Zl@6aoQ
+#spring.jwt.secret=vj[WQkk\,.}Wb?+E4sZ}>w!MmE`&w[o@VSR$jB)l<hr(jM\fae3Z-weXq``&dr,1
+spring.jwt.secret=S#F&K9c60=pZKa1sZKjA-Q#Ima#XR$^=Ef9Ve~&q==_%^{x&.4wCE}yL1UVJ8)ez
