--- a/workspace_spring/Shop_answer/src/main/resources/application.properties
+++ b/workspace_spring/Shop_answer/src/main/resources/application.properties
@@ -5,7 +5,9 @@ spring.application.name=Shop_answer
 #spring.datasource.url=jdbc:mariadb://localhost:3306/study_db
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.url=jdbc:log4jdbc:mariadb://localhost:3306/study_db
-spring.datasource.username=study_user
+#spring.datasource.username=study_user
+#\uB9E5\uBD81\uC73C\uB85C \uD6A8\uB2C8 \uACC4\uC815 \uB2E4\uC2DC \uB9CC\uB4E6
+spring.datasource.username=hk.kim
 spring.datasource.password=mariadb
 
 #\uCFFC\uB9AC\uAC00 \uB4E4\uC5B4\uC788\uB294 mapper \uD30C\uC77C \uC704\uCE58 \uC9C0\uC815
