--- a/workspace_spring/Shop_answer/build.gradle
+++ b/workspace_spring/Shop_answer/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 	compileOnly("org.springframework.boot:spring-boot-devtools") //html새로고침
 //	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	//implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
