--- a/workspace_spring/Shop_answer/src/main/resources/application.properties
+++ b/workspace_spring/Shop_answer/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=Shop_answer
 
+#server.port=8081
+
+
 #\uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC811\uC18D \uC815\uBCF4
 #spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 #spring.datasource.url=jdbc:mariadb://localhost:3306/study_db
