--- a/workspace_spring/Shop_answer/src/main/resources/application.properties
+++ b/workspace_spring/Shop_answer/src/main/resources/application.properties
@@ -6,12 +6,19 @@ spring.application.name=Shop_answer
 #\uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC811\uC18D \uC815\uBCF4
 #spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 #spring.datasource.url=jdbc:mariadb://localhost:3306/study_db
-spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:mariadb://localhost:3306/study_db
+#spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+#spring.datasource.url=jdbc:log4jdbc:mariadb://localhost:3306/study_db
 #spring.datasource.username=study_user
 #\uB9E5\uBD81\uC73C\uB85C \uD6A8\uB2C8 \uACC4\uC815 \uB2E4\uC2DC \uB9CC\uB4E6
-spring.datasource.username=hk.kim
-spring.datasource.password=mariadb
+#spring.datasource.username=hk.kim
+#spring.datasource.password=mariadb
+
+
+#aws
+spring.datasource.url=jdbc:mariadb://database-bookstore.cl44wkw02pc8.ap-northeast-1.rds.amazonaws.com:3306/database-bookstore
+spring.datasource.username=root
+spring.datasource.password=101204kim
+spring.datasource.driver-class-name=com.mariadb.cj.jdbc.Driver
 
 
 
