--- a/workspace_spring/Shop_answer/src/main/resources/application.properties
+++ b/workspace_spring/Shop_answer/src/main/resources/application.properties
@@ -1,26 +1,38 @@
 spring.application.name=Shop_answer
 
-#server.port=8081
+server.port=80
 
 
 #\uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC811\uC18D \uC815\uBCF4
-#spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-#spring.datasource.url=jdbc:mariadb://localhost:3306/study_db
+spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+#spring.datasource.url=jdbc:mariadb://localhost:3306/study_db \uD559\uC6D0?
 #spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 #spring.datasource.url=jdbc:log4jdbc:mariadb://localhost:3306/study_db
 #spring.datasource.username=study_user
 #\uB9E5\uBD81\uC73C\uB85C \uD6A8\uB2C8 \uACC4\uC815 \uB2E4\uC2DC \uB9CC\uB4E6
 #spring.datasource.username=hk.kim
 #spring.datasource.password=mariadb
+logging.level.org.springframework.web=DEBUG
 
 
 #aws
-spring.datasource.url=jdbc:mariadb://database-bookstore.cl44wkw02pc8.ap-northeast-1.rds.amazonaws.com:3306/database-bookstore
+spring.datasource.url=jdbc:mariadb://database-bookstore.cl44wkw02pc8.ap-northeast-1.rds.amazonaws.com:3306/bookstore
 spring.datasource.username=root
 spring.datasource.password=101204kim
-spring.datasource.driver-class-name=com.mariadb.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#\uD0C0\uC784\uC2DC\uAC04\uB298\uB9AC\uAE30
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=10
 
+#\uB85C\uADF8\uCD9C\uB825
+#logging.level.com.zaxxer.hikari=DEBUG
+#logging.level.org.springframework.jdbc.datasource=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
 
 
 #\uCFFC\uB9AC\uAC00 \uB4E4\uC5B4\uC788\uB294 mapper \uD30C\uC77C \uC704\uCE58 \uC9C0\uC815
@@ -29,3 +41,4 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 #\uC2A4\uD504\uB9C1 \uD30C\uC77C \uC5C5\uB85C\uB4DC \uC6A9\uB7C9(\uBBF8 \uC124\uC815 \uC2DC \uAE30\uBCF8\uC73C\uB85C 1MB)
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
