--- a/workspace_spring/Shop_answer/.gitignore
+++ b/workspace_spring/Shop_answer/.gitignore
@@ -35,3 +35,9 @@ out/
 
 ### VS Code ###
 .vscode/
+
+# .gitignore
+application.properties
+/src/main/resources/application.properties
+src/main/resources/application.properties
+workspace_spring/Shop_answer/src/main/resources/application.properties
